// Copyright (C) 2020 Ellen Poe
//
// This file is part of MASS.
//
// MASS is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// MASS is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with MASS.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";
package api;

message Position {
  // Latitude.
  double lat = 1;
  // Longitude.
  double lng = 2;
}

message Bounds {
  // The southwest bound.
  Position south_west = 1;
  // The northeast bound.
  Position north_east = 2;
}

message HeadingBounds {
  uint32 left_bound = 1;
  uint32 right_bound = 2;
}
